--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,9 @@ target_link_libraries(projeto_final
         hardware_clocks
         hardware_timer
         hardware_rtc
+        hardware_pwm
         pico_cyw43_arch_lwip_poll
+        pico_multicore
         )
 
 pico_add_extra_outputs(projeto_final)
